- remove deprecated URL constructor (since JDK 21) - remove Override API-only calls - remove deprecated usages